--- a/technical.html
+++ b/technical.html
@@ -60,7 +60,17 @@
               computing solutions, with varying levels of compute capability.<br>
             </span></p>
           <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Vision</span></h3>
-          <img  alt=""  src="images/content/cameras.png">
+          <img  alt=""  src="images/content/cameras.png"><br>
+          <span  style="font-family: LTAroma;">While working on our very early
+            protoypes, we had adopted the PointGrey Firefly MV USB2.0 cameras,
+            and continue to use them till date. Available fairly easily, these
+            cameras are relatively inexpensive (~ $200) and very easy to
+            integrate. They are also directly synchronizable in hardware with a
+            precision GPIO pulse, something of utomost importance when working
+            with visual-inertial applications.<br>
+            <br>
+            We also evalua<br>
+          </span>
           <p></p>
           <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Flight
               Control<br>
@@ -75,7 +85,7 @@
           <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Mapping</span></h3>
           <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Terrain
               Analysis</span></h3>
-          <img  alt=""  src="images/gallery/mapping.png">
+          <img  alt=""  src="images/content/mapping.png">
           <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Obstacle
               Avoidance</span></h3>
           <h3><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">Trajectory
