--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@
           <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">MAV1</span></h2>
           <p>MAV1 was the first Artemis series vehicle to carry Intel x86
             computing onboard. It was powered by an Intel Core i5 NUC. </p>
-          <img  alt=""  src="file:///home/kabir/artemis_web/images/content/mav1.jpg">
+          <img  alt=""  src="images/content/mav1.jpg">
           <h2><span  style="font-family: LTAroma; color: rgb(102, 102, 102)">MAV
               X</span></h2>
           MAV X was the very first among the Artemis MAVs. It had standard
